popup edit for career

--- a/Views/Career/CreateCareer.cshtml
+++ b/Views/Career/CreateCareer.cshtml
@@ -67,7 +67,7 @@
                 <div class="col-md-4">
 
                     <div class="form-group">
-                        <label class="control-label">Upload Career Image</label>
+                        <label class="control-label">Upload Career Image jpg or png</label>
                         <input asp-for="CareerImgfile" class="form-control" type="file" />
                         <span asp-validation-for="CareerImgfile" class="text-danger"></span>
                     </div>
